# pixlab

./: .gitignore  LICENSE  README.md  README.vi.md  README.zh.md  package-lock.json  package.json
.github/release-notes/: v0.1.4.md  v0.1.5.md
.github/workflows/: release.yml
dist-desktop/: index.html  pet-overlay.html  robots.txt  sitemap.xml
dist-desktop/assets/: core-BdbZEg0-.js  core-BtIqhFsV.js  dist-js-BYNo7F1F.js  event-BY0ZcW0C.js  event-Uso0eJej.js  main-2p2KgMQx.js  main-C3PUSBl6.css  main-CEjXygrH.css  main-CWi0CkeX.css  main-C_uuuQoJ.js  main-Cf3GB9ab.js  main-DOsr5deb.js  main-SpjHeupB.css  main-UG8aMotq.js  main-X2-WfqVf.js  main-beFyq1Vs.css
dist-desktop/downloads/: pixlab-codex-installer-0.1.0.tgz  pixlab-codex-installer-0.1.1.tgz  pixlab-codex-installer-0.1.2.tgz  pixlab-codex-installer-0.1.3.tgz  pixlab-codex-installer-0.1.4.tgz  pixlab-codex-installer-0.1.5.tgz  pixlab-codex-installer-0.1.6.tgz  pixlab-codex-installer-0.1.7.tgz  pixlab-codex-installer-0.1.8.tgz  pixlab-codex-installer-0.1.9.tgz
dist-desktop/install/: pixlab-codex.ps1
dist-desktop/pet-gallery/: README.md
dist-desktop/pet-gallery/elon-musk-pet/: pet.json
dist-desktop/pet-gallery/pixpet-pet/: pet.json
dist-desktop/vi/: index.html
dist-desktop/zh/: index.html
pet-gallery/: manifest.json
pet-gallery/donal-trump-pet/: pet.json
scripts/: package-macos-ad-hoc.sh  prepare-local-frontend.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.standalone.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
